# AI_project

./: .gitignore  01_pdf_rag.py  01_pdf_rag_domain.py  analyzer.py  category_mapper.py  check_environment.py  config.py  crawler_utils.py  enhanced_rag_chain.py  main.py  monitoring_system.py  pipeline_full.py  prompts.py  pyproject.toml  rag_chain.py  requirements.txt  run_embedding_update.py  streamlit_app.py  structure.txt  vector_store.py
data/: analyzed_articles.json  crawled_articles.json
data/debug/: debug_analyzer.py  debug_crawler.py  debug_rag.py  debug_streamlit.py  debug_vector.py
vector_store/: faiss.index  metadata.jsonl
